<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.devpai.meupedido.ui.home.HomeActivity"
    tools:showIn="@layout/app_bar_home"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_search"
        android:background="@android:color/transparent">
        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:paddingStart="15dp"
            android:background="@android:color/transparent"
            android:hint="@string/search"
            android:visibility="visible"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/edit_text_search"
            android:background="@color/colorViewDarkTransparent"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_above="@+id/rl_total_price_field"
        android:layout_below="@id/layout_search">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_produtcts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_total_price_field"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:elevation="5dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:text="@string/total"/>

        <TextView
            android:id="@+id/text_view_price_total"
            android:layout_toRightOf="@+id/text_total"
            android:layout_toEndOf="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:text="@string/default_price_view"/>




        <TextView
            android:id="@+id/text_view_label_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="0"/>

        <TextView
            android:layout_toStartOf="@+id/text_view_label_quantity"
            android:layout_toLeftOf="@+id/text_view_label_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:text="Qtd:"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/view_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:visibility="gone">

        <ImageView
            android:id="@+id/image_view_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:tint="@android:color/white"
            android:src="@drawable/warning"/>

        <TextView
            android:id="@+id/text_view_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/image_view_error"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@android:color/black"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/btn_refresh"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_refresh_white_24dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_below="@id/image_view_error"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</RelativeLayout>
