<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.devpai.meupedido.ui.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo_texto"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_logo"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">
                <EditText
                    android:id="@+id/input_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textEmailAddress"
                    android:hint="@string/user"/>
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login_validation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/entrar"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_recive_password"
        android:layout_below="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/label_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="Esqueceu sua senha? "/>
        <TextView
            android:id="@+id/tv_recive_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_login"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:text=" Clique aqui."/>
    </RelativeLayout>
    <View
        android:id="@+id/view_screen_login"
        android:layout_below="@id/ll_recive_password"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/fontColor"/>

    <LinearLayout
        android:id="@+id/login_social_hub"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/btn_make_register_with_facebook"
            android:layout_width="0dp"
            android:clickable="true"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/facebookColor"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/logo_facebook"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebook_logo"/>

                <TextView
                    android:layout_toRightOf="@id/logo_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="Use o facebook"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_make_register_with_google"
            android:layout_width="0dp"
            android:clickable="true"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#f34336"
            android:visibility="gone">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/logo_google"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/google2"/>

                <TextView
                    android:layout_toRightOf="@id/logo_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="Use o google"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_above="@id/login_social_hub">

        <android.support.v7.widget.CardView
            android:id="@+id/btn_make_register"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#fc6401">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="CRIAR CADASTRO"
                android:textColor="@color/white"/>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</RelativeLayout>
